--- a/css/main.css
+++ b/css/main.css
@@ -185,15 +185,29 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  height: 581px;
-  min-width: 528px;
+  height: 609px;
+  max-width: 450px;
   max-height: 100vh;
   padding: 40px;
+  overflow-y: auto;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    min-width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    height: 581px;
+    min-width: 528px;
+  }
 }
 
 .modal__close-btn {
@@ -215,9 +229,15 @@ img {
 .modal__title {
   margin-bottom: 30px;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   color: #212121;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    line-height: 1.15;
+  }
 }
 
 .modal-wrapper {
@@ -311,8 +331,15 @@ img {
 }
 
 .checkbox__label {
-  line-height: 1.71;
-  color: primary-text-color;
+  font-size: 12px;
+  line-height: 1.16;
+}
+
+@media screen and (min-width: 1200px) {
+  .checkbox__label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .checkbox__link {
@@ -1029,9 +1056,16 @@ img {
 }
 
 .clients-list {
+  margin: -15px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+@media screen and (min-width: 425px) {
+  .clients-list {
+    margin: 0;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -1042,11 +1076,18 @@ img {
 }
 
 .clients-list__item {
-  flex-basis: calc((100% - 2 * 30px) / 2);
-  margin-bottom: 30px;
+  margin: 15px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 425px) {
+  .clients-list__item {
+    margin: 0;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .clients-list__item:nth-child(2n + 1) {
     margin-right: 30px;
   }
@@ -1161,11 +1202,17 @@ img {
 
 .examples-list__item {
   flex-basis: 100%;
+  margin-top: 30px;
 }
 
-.examples-list__item:not(:nth-child(-n + 2)) {
-  margin-left: 30px;
-  margin-top: 30px;
+@media screen and (min-width: 768px) {
+  .examples-list__item {
+    margin-top: 0;
+  }
+  .examples-list__item:not(:nth-child(-n + 2)) {
+    margin-left: 30px;
+    margin-top: 30px;
+  }
 }
 
 @media screen and (min-width: 768px) {
