--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,16 +24,27 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  height: 581px;
-  min-width: 528px;
+
+  height: 609px;
+  max-width: 450px;
   max-height: 100vh;
   padding: 40px;
+  overflow-y: auto;
   background-color: $primary-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 480px) {
+    min-width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    height: 581px;
+    min-width: 528px;
+  }
 }
 
 .modal__close-btn {
@@ -55,9 +66,13 @@
 .modal__title {
   margin-bottom: 30px;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   color: $title-text-color;
+
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
 }
 
 .modal-wrapper {
@@ -160,8 +175,13 @@
 }
 
 .checkbox__label {
-  line-height: 1.71;
-  color: primary-text-color;
+  font-size: 12px;
+  line-height: 1.16;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .checkbox__link {
