--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -13,9 +13,14 @@
 
 .clients-list {
   @extend %list;
+  margin: -15px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  @media screen and (min-width: 425px) {
+    margin: 0;
+  }
 
   @include for-desktop-up {
     display: inline-flex;
@@ -24,12 +29,16 @@
 }
 
 .clients-list__item {
-  flex-basis: calc((100% - 2 * 30px) / 2);
-  margin-bottom: 30px;
+  margin: 15px;
+  @media screen and (min-width: 425px) {
+    margin: 0;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    margin-bottom: 30px;
 
-  @media screen and (max-width: 767px) {
-    &:nth-child(2n + 1) {
-      margin-right: 30px;
+    @media screen and (max-width: 767px) {
+      &:nth-child(2n + 1) {
+        margin-right: 30px;
+      }
     }
   }
 
