--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -77,11 +77,15 @@
 
 .examples-list__item {
   flex-basis: 100%;
+  margin-top: 30px;
   // flex-basis: calc((100% - 3 * 30px) / 3);
 
-  &:not(:nth-child(-n + 2)) {
-    margin-left: 30px;
-    margin-top: 30px;
+  @media screen and (min-width: 768px) {
+    margin-top: 0;
+    &:not(:nth-child(-n + 2)) {
+      margin-left: 30px;
+      margin-top: 30px;
+    }
   }
 
   @media screen and (min-width: 768px) {
