--- a/css/main.css
+++ b/css/main.css
@@ -167,6 +167,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  z-index: 10;
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -497,7 +498,7 @@ img {
   }
 }
 
-@media (min-width: 480px) {
+@media (min-width: 768px) {
   .page-header__desktop {
     display: flex;
     flex-grow: 1;
@@ -514,8 +515,6 @@ img {
 .page-header__nav {
   display: flex;
   align-items: flex-end;
-  padding-top: 22px;
-  padding-bottom: 22px;
   justify-content: space-between;
   display: flex;
   align-items: center;
@@ -524,6 +523,12 @@ img {
 .page-header__logo {
   padding: 16px 0;
   margin-right: 88px;
+}
+
+@media screen and (min-width: 768px) {
+  .page-header__logo {
+    padding: 0;
+  }
 }
 
 .page-header__logo--accent {
@@ -624,9 +629,15 @@ img {
   text-align: center;
 }
 
-@media (min-width: 480px) {
+@media (min-width: 768px) {
   .page-footer__container {
     display: flex;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-footer__container {
+    text-align: left;
   }
 }
 
@@ -794,6 +805,8 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-mobile-min.jpg);
 }
 
@@ -801,8 +814,6 @@ img {
   .hero-section {
     max-width: 1600px;
     min-height: 600px;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 
@@ -885,6 +896,12 @@ img {
   }
   .advantages-list__item:not(:last-child) {
     margin-right: 30px;
+  }
+}
+
+@media (min-width: 768px) and (min-width: 1200px) {
+  .advantages-list__item:not(:last-child) {
+    margin-bottom: 0;
   }
 }
 
@@ -1113,12 +1130,22 @@ img {
 
 .clients-list__link {
   display: inline-flex;
-  padding: 16px 32px;
+  /* padding: 16px 32px; */
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  max-width: 170px;
-  max-height: 92px;
+  /* max-width: 170px; */
+  min-height: 92px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list__link {
+    min-width: 170px;
+  }
 }
 
 .clients-list__link:hover, .clients-list__link:focus {
@@ -1197,6 +1224,8 @@ img {
   .examples-list {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
   }
 }
 
@@ -1225,10 +1254,7 @@ img {
 @media (min-width: 1200px) {
   .examples-list__item {
     flex-basis: calc((100% - 3 * 30px) / 3);
-  }
-  .examples-list__item:not(:nth-child(-n + 2)) {
-    margin-left: 30px;
-    margin-top: 0;
+    margin-top: 30px;
   }
 }
 
