--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -26,6 +26,12 @@
     &:not(:last-child) {
       margin-right: 30px;
     }
+
+    @include for-desktop-up {
+      &:not(:last-child) {
+        margin-bottom: 0;
+      }
+    }
   }
 
   @include for-desktop-up {
