--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -60,13 +60,29 @@
 }
 
 .clients-list__link {
+  // display: inline-flex;
+  // padding: 16px 32px;
+  // border: 1px solid #afb1b8;
+  // border-radius: 4px;
+  // max-width: 170px;
+  // max-height: 92px;
+  // transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
-  padding: 16px 32px;
+  /* padding: 16px 32px; */
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  max-width: 170px;
-  max-height: 92px;
+  /* max-width: 170px; */
+  // max-height: 92px;
+  min-height: 92px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 1200px) {
+    min-width: 170px;
+  }
 
   &:hover,
   &:focus {
