--- a/sass/layouts/_page-footer.scss
+++ b/sass/layouts/_page-footer.scss
@@ -8,8 +8,12 @@
   @extend %container;
   text-align: center;
 
-  @include for-tablet-portrait-up {
+  @include for-tablet-landscape-up {
     display: flex;
+  }
+
+  @include for-desktop-up {
+    text-align: left;
   }
 
   @media screen and (min-width: 480px) and (max-width: 1199px) {
