--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -69,8 +69,8 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    // margin-left: -30px;
-    // margin-top: -30px;
+    margin-left: -30px;
+    margin-top: -30px;
   }
   // justify-content: center;
 }
@@ -98,11 +98,16 @@
 
   @include for-desktop-up {
     flex-basis: calc((100% - 3 * 30px) / 3);
+    margin-top: 30px;
 
-    &:not(:nth-child(-n + 2)) {
-      margin-left: 30px;
-      margin-top: 0;
-    }
+    // &:not(:nth-child(-n + 2)) {
+    //   margin-left: 30px;
+    //   margin-top: 0;
+    // }
+    // &:nth-child(-n + 2) {
+    //   margin-left: 30px;
+    //   margin-top: 0;
+    // }
   }
 }
 
